# backend

./: .env  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  apply.sh  pyproject.toml  settings.toml  setup.py  wsgi.py
.github/: rename_project.sh
backend/: __main__.py  models.py
backend/ext/: admin.py  auth.py  commands.py
backend/ext/restapi/: resources.py
backend/ext/webui/: views.py
tests/: conftest.py
