[tool.poetry]
name = "a_flask_test"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
flask-simplelogin = "^0.1.1"
Flask-Bootstrap = "^3.3.7"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy-serializer = "^1.4.1"
dynaconf = "^3.1.9"
click = "^8.1.3"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.3"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
mypy = "^0.971"
gitchangelog = "^3.0.4"
mkdocs = "^1.3.1"
Flask-DebugToolbar = "^0.13.1"
flask-shell-ipython = "^0.4.1"
ipdb = "^0.13.9"
pytest-flask = "^1.2.0"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backend = 'backend.__main__:main'
